# My-Research-Orbit

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GOVERNANCE.md  LICENSE  NOTICE  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  USAGE_NOTICE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_WORKFLOWS.md  ARCHITECTURE.md  CONTEXT_USAGE_SCENARIOS.md  EVALUATION_PLAN.md  GITHUB_PROOF_MATERIALS_GUIDE.md  LOCAL_APPLICATION_PACK_GUIDE.md  PROJECT_PROPOSAL.md  PROVIDER_ADAPTERS.md  ROADMAP.md  SECURITY_AND_REDACTION.md
examples/: sample_comsol_audit_note.md  sample_config.yaml  sample_operation_log.md  sample_run_log.txt  sample_word_revision_note.md
outputs/: memory_cards.jsonl  redaction_report.md  research_memory_report.md
src/research_orbit/: __init__.py  application_pack.py  cli.py  config.py  ingest.py  llm.py  memory_cards.py  redaction.py  reports.py  schemas.py  ui_server.py  validators.py  workflows.py
src/research_orbit/providers/: __init__.py  anthropic_provider.py  base.py  dry_run.py  gemini_provider.py  openai_compatible.py  openai_provider.py  provider_registry.py
src/research_orbit/ui_assets/: app.js  index.html  (+1 more)
tests/: test_application_pack.py  test_cli.py  test_memory_cards.py  test_provider_registry.py  test_redaction.py  test_ui_server.py  test_workflows.py
workflows/: application_pack_writer.yaml  comsol_model_auditor.yaml  research_memory_compactor.yaml  run_log_diagnoser.yaml  simulation_porting_reviewer.yaml  word_mathtype_editor.yaml
