[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "research-orbit"
version = "0.1.0"
description = "Agentic Research OS for reusable scientific AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "tietouaming" }]
keywords = ["research", "agent-workflows", "llm", "redaction", "scientific-computing"]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
research-orbit = "research_orbit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/research_orbit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
